# appimage-runtime-rs

./: .bazelrc  BUILD  Cargo.toml  MODULE.bazel  Readme.md
.github/workflows/: ci.yml
appimage-mount/: BUILD  Cargo.toml
appimage-mount/src/: mount.rs
appimage-mount/tests/: mount_test.rs
appimage-runtime/: BUILD  Cargo.toml
appimage-runtime/src/: extract.rs  lib.rs  util.rs
appimage-runtime/tests/: extract_test.rs  util_test.rs
tests/: BUILD  args_test.sh  extract_and_run_test.sh  extract_test.sh  integration_test.sh  list.sh  list_test.sh  magic_test.sh  mount_and_run_test.sh  mount_test.sh  print_offset_test.sh
