[package]
name = "appimage-runtime"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
backhand = "0.18.0"
base62 = "2.0.2"
elf = "0.7.4"
fork = "0.2.0"
glob = "0.3.1"
seahash = "4.1.0"
tempfile = "3.12.0"
waitpid-any = "0.2.1"

[dev-dependencies]
runfiles = "0.1.0"
